[FIX] Wrap blocks [BONUS] Heart

--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ li{
   max-width: 1200px;
   height: fit-content;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   flex-wrap: wrap;
 }
 
@@ -61,7 +61,8 @@ li{
 }
 
 .card{
-  width: calc(1200px / 3 - 20px);
+  width: 30%;
+  min-width: calc(1200px / 6);
   margin-bottom: 30px;
 }
 
@@ -69,7 +70,8 @@ li{
   width: 100%;
 }
 
-.discount, .sustain{
+
+.discount, .sustain, .sustain-last{
   color: white;
   position: absolute;
   padding: 5px;
@@ -87,6 +89,11 @@ li{
   left: 40px;
 }
 
+.sustain-last{
+  background-color: green;
+  left: 0;
+}
+
 .heart{
   background-color: white;
   padding: 5px 15px;
@@ -96,7 +103,14 @@ li{
   right: 0;
 }
 
+.heart:hover{
+  color: red;
+  cursor: pointer;
+}
+
+
 .text-box{
+  position: relative;
   display: flex;
   flex-direction: column;
   font-size: 0.9em;
